--- a/html5/index.html
+++ b/html5/index.html
@@ -1,41 +1,47 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<script type="text/javascript" src="markdown.min.js"></script>
-<script type="text/javascript" src="model.js"></script>
-<script type="text/javascript" src="core.js"></script>
-<script type="text/javascript" src="commands.js"></script>
-<script type="text/javascript" src="rooms.js"></script>
-<script type="text/javascript" src="items.js"></script>
-<script type="text/javascript" src="recipes.js"></script>
-<script type="text/javascript" src="io.js"></script>
-<script type="text/javascript" src="ai.js"></script>
-<script type="text/javascript">
+    <meta charset="utf-8">
+    <title>JSMUD</title>
+    <script type="text/javascript" src="markdown.min.js"></script>
+    <script type="text/javascript" src="core.js"></script>
+    <script type="text/javascript" src="body.js"></script>
+    <script type="text/javascript" src="aibody.js"></script>
+    <script type="text/javascript" src="shopkeep.js"></script>
+    <script type="text/javascript" src="room.js"></script>
+    <script type="text/javascript" src="item.js"></script>
+    <script type="text/javascript" src="recipe.js"></script>
+    <script type="text/javascript" src="io.js"></script>
+    <script type="text/javascript">
 
-function load() {
-    setup("input", "output");
-    run();
-    input.focus();
-}
+        function load()
+        {
+            setup("input", "output");
+            run();
+            input.focus();
+        }
 
-</script>
-<style type="text/css">
-#input, #output{
-    position:relative;
-    font-family:"Courier New";
-    font-size:12pt;
-    width:100%;
-}
-#output{
-    height:35em;
-    overflow-y:scroll;
-}
-</style>
+    </script>
+    <style type="text/css">
+        #input, #output
+        {
+            position: relative;
+            font-family: "Courier New";
+            font-size: 12pt;
+            width: 100%;
+        }
+
+        #output
+        {
+            height: 35em;
+            overflow-y: scroll;
+        }
+    </style>
 </head>
 <body onload="load()">
     <div id="output"></div>
-    <input type="text" id="input" autocomplete="off">
+    <input type="text" id="input" autocomplete="off" value="help">
     <button onclick="run()" id="start">start</button>
 </body>
 </html>
+
