a small "enter" button, in case this runs on a tablet

--- a/html5/index.html
+++ b/html5/index.html
@@ -42,6 +42,7 @@
     <div id="output"></div>
     <input type="text" id="input" autocomplete="off" value="help">
     <button onclick="run()" id="start">start</button>
+    <button onclick="enterCommand()">enter</button>
 </body>
 </html>
 
