scavenger type AI

--- a/html5/index.html
+++ b/html5/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="body.js"></script>
     <script type="text/javascript" src="aibody.js"></script>
     <script type="text/javascript" src="shopkeep.js"></script>
+    <script type="text/javascript" src="scavenger.js"></script>
     <script type="text/javascript" src="room.js"></script>
     <script type="text/javascript" src="item.js"></script>
     <script type="text/javascript" src="recipe.js"></script>
