--- a/html5/index.html
+++ b/html5/index.html
@@ -47,7 +47,7 @@
 </head>
 <body onload="load()">
     <div id="output"></div>
-    <input type="text" id="input" autocomplete="off" value="help">
+    <input type="text" id="input" autocomplete="off">
     <button onclick="run()" id="start">start</button>
     <button onclick="enterCommand()" id="enter">enter</button>
 </body>
