--- a/html5/index.html
+++ b/html5/index.html
@@ -25,7 +25,7 @@
 
     </script>
     <style type="text/css">
-        body, #input
+        body, #input, button
         {
             color: #00ff00;
             background-color: black;
