--- a/html5/index.html
+++ b/html5/index.html
@@ -45,7 +45,7 @@
 
         @media (min-width:320px)
         { /* smartphones, iPhone, portrait 480x320 phones */
-            *
+            html
             {
                 font-size: 8pt;
             }
@@ -58,7 +58,7 @@
 
         @media (min-width:641px)
         { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-            *
+            html
             {
                 font-size: 12pt;
             }
@@ -66,14 +66,6 @@
             #output
             {
                 padding: 3em;
-            }
-        }
-
-        @media (min-width:1281px)
-        { /* hi-res laptops and desktops */
-            #output
-            {
-                padding: 5em;
             }
         }
 
