--- a/html5/index.html
+++ b/html5/index.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/client.js"></script>
     <script type="text/javascript">
-        function load(i, o) {
-            client.setup(i, o);
+        function load(i, o, u) {
+            client.setup(i, o, u);
             client.run();
             input.focus();
         }
@@ -18,69 +18,13 @@
         addEventListener("touchup", focuser);
         addEventListener("mouseup", focuser);
     </script>
+    <link type="text/css" rel="stylesheet" href="style.css">
     <style type="text/css">
-        *
-        {
-            padding: 0;
-            margin: 0;
-            font-family: "Eagle Lake", Georgia, sans;
-            color: #3e3223;
-            background-color: #b6d6b6;
-            border: 0;
-            -moz-box-sizing: border-box;
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-        }
 
-        #output, #input
-        {
-            width: 95%;
-        }
-
-        #output
-        {
-            overflow-y: scroll;
-            transition: opacity 3s ease;
-        }
-
-        @media (min-width:320px)
-        { /* smartphones, iPhone, portrait 480x320 phones */
-            html
-            {
-                font-size: 8pt;
-            }
-
-            #output
-            {
-                padding: 0.5em;
-            }
-        }
-
-        @media (min-width:641px)
-        { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-            html
-            {
-                font-size: 12pt;
-            }
-
-            #output
-            {
-                padding: 3em;
-            }
-        }
-
-        .fadeIn
-        {
-            opacity: 0.0;
-            -webkit-transition: opacity 1s;
-            -moz-transition: opacity 1s;
-            transition: opacity 1s ease;
-        }
     </style>
 </head>
-<body onload="load('input', 'output')">
+<body onload="load('input', 'output', 'playerStatus')">
     <div id="output"></div>
-    <input type="text" id="input" autocomplete="off" placeholder="<disconnected>">
-    <!-- <button onclick="enterCommand()" id="enter">enter</button> -->
+    <span id="playerStatus"></span><input type="text" id="input" autocomplete="off" placeholder="<disconnected>">
 </body>
 </html>
