--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>JSMUD</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/client.js"></script>
     <script type="text/javascript">
@@ -18,13 +17,11 @@
       }
     </script>
     <link type="text/css" rel="stylesheet" href="style.css">
-    <style type="text/css">
-
-    </style>
   </head>
   <body onload="load( 'input', 'playerStatus' )">
     <div id="news"></div>
     <span id="playerStatus"></span><input type="text" id="input" autocomplete="off" placeholder="<disconnected>">
-    <div id="chat"></div><a href="https://github.com/capnmidnight/small-town"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    <div id="chat"></div>
+    <a href="https://github.com/capnmidnight/small-town"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
   </body>
 </html>
